Register and Login Functions Added + Docs

--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -1,21 +1,24 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is the backend for my messaging website.",
   "main": "index.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "dev": "nodemon index.js"
+    "start": "node --env-file=.env index.js",
+    "dev": "nodemon --env-file=.env index.js"
   },
   "keywords": [],
   "author": "Paolo Enerio",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0"
